--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,15 +15,15 @@ configuration: Release
 clone_folder: c:\xmrigCC
 
 install:
-  - curl -sL https://github.com/xmrig/xmrig-deps/archive/v3.5.zip -o xmrig-deps.zip
-  - 7z x xmrig-deps.zip -o"c:\" -y > nul
+  - curl -sL https://github.com/AbstandAbstand/xmrigCC-deps/archive/v4.zip -o xmrigCC-deps.zip
+  - 7z x xmrigCC-deps.zip -o"c:\" -y > nul
 
 build_script:
   - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\Tools\VsMSBuildCmd.bat"
   - cd c:\xmrigCC
   - mkdir build
   - cd build
-  - cmake -G "Visual Studio 15 2017 Win64" -T v141,host=x64 .. -DXMRIG_DEPS=c:\xmrig-deps-3.5\msvc2017\x64
+  - cmake -G "Visual Studio 15 2017 Win64" -T v142,host=x64 .. -DXMRIG_DEPS=c:\xmrigCC-deps-4\msvc2017\x64
   - msbuild xmrig.sln /p:Configuration=Release
 
 after_build:
